# my-skills

./: .gitignore  .gitmodules  AGENTS.md  README.md  SKILLS.md  pull.bat  pull.ps1  pull.sh  push.bat  push.ps1  push.sh  update.bat  update.ps1  update.sh
automation/: Arm-AutopilotCutover.ps1  README.md  Start-Autopilot.ps1  Watch-Autopilot.ps1  arm-autopilot-cutover.sh  autopilot-config.json  autopilot-k2ph-review-config.json  autopilot-scaffold-version.json  autopilot.py  round-prompt-k2ph-review.md  round-prompt.md  round-result.schema.json
automation/_autopilot/: baseline.py  bootstrap_runtime.py  cli_parser.py  controller_builders.py  controller_runtime.py  health_runtime.py  lanes.py  process_control.py  start_runtime.py  validation.py  watch_runtime.py
config/: sources.yaml
custom/a4-novak-html-cover/: SKILL.md
custom/a4-novak-svg-cover/: SKILL.md
custom/codex-autopilot-scaffold/: RUNTIME-ARCHITECTURE.md  RUNTIME-ARCHITECTURE.zh-CN.md  SKILL.md
custom/design-reference-router/: SKILL.md
custom/fork-upstream-workflow/: SKILL.md
custom/kimi-code-review/: SKILL.md
custom/knowledge-to-print-html/: .gitignore  SKILL.md  review_print_pages.py  validate_print_layout.py
custom/lean-ctx-opencode-plugin/: SKILL.md
custom/math-to-obsidian-note/: SKILL.md
custom/obsidian-plugin-i18n/review_gui/: CMakeLists.txt  build_review_gui.bat  review_gui.cpp
docs/: full-catalog.md  skills-index.json
liquid-glass-compose/: SKILL.md
pdf-toc-bookmarker/: SKILL.md
scripts/: generate_skills_catalog.py  pre-commit  update_external.py  verify_structure.py
(+568 files in other folders)
